<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnC"
                style="@style/ActionButton"
                android:background="@drawable/clear_button"
                android:text="@string/btn_clear" />

            <TextView
                android:id="@+id/btnOpenBr"
                style="@style/NumberButton"
                android:text="@string/btn_open_bracket" />

            <TextView
                android:id="@+id/btnCloseBr"
                style="@style/NumberButton"
                android:text="@string/btn_close_bracket" />

            <TextView
                android:id="@+id/btnDivide"
                style="@style/ActionButton"
                android:text="@string/btn_divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn7"
                style="@style/NumberButton"
                android:text="@string/number7" />

            <TextView
                android:id="@+id/btn8"
                style="@style/NumberButton"
                android:text="@string/number8" />

            <TextView
                android:id="@+id/btn9"
                style="@style/NumberButton"
                android:text="@string/number9" />

            <TextView
                android:id="@+id/btnMultiply"
                style="@style/ActionButton"
                android:text="@string/btn_multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn4"
                style="@style/NumberButton"
                android:text="@string/number4" />

            <TextView
                android:id="@+id/btn5"
                style="@style/NumberButton"
                android:text="@string/number5" />

            <TextView
                android:id="@+id/btn6"
                style="@style/NumberButton"
                android:text="@string/number6" />

            <TextView
                android:id="@+id/btnMinus"
                style="@style/ActionButton"
                android:text="@string/btn_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn1"
                style="@style/NumberButton"
                android:text="@string/number1" />

            <TextView
                android:id="@+id/btn2"
                style="@style/NumberButton"
                android:text="@string/number2" />

            <TextView
                android:id="@+id/btn3"
                style="@style/NumberButton"
                android:text="@string/number3" />

            <TextView
                android:id="@+id/btnPlus"
                style="@style/ActionButton"
                android:text="@string/btn_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnSign"
                style="@style/NumberButton"
                android:text="@string/btn_change_sign" />

            <TextView
                android:id="@+id/btn0"
                style="@style/NumberButton"
                android:text="@string/number0" />

            <TextView
                android:id="@+id/btnDot"
                style="@style/NumberButton"
                android:text="@string/btn_dot" />

            <TextView
                android:id="@+id/btnResult"
                style="@style/ActionButton"
                android:background="@drawable/result_button"
                android:text="@string/btn_result" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>